<resources>
    <string name="app_name">SuperSmashStatTracker</string>
    <string name="winTotal">0</string>
    <string name="lossTotal">0</string>
    <string name="add_win">Add Win</string>
    <string name="add_loss">Add Loss</string>
    <string name="winPercentage">0%</string>
    <string name="new_tracker">New Tracker</string>
    <string name="name">Name:</string>
    <string name="empty">Empty</string>
    <string name="submit">Submit</string>
    <string name="brawl">Brawl</string>
    <string name="melee">Melee</string>
    <string name="nintendo_64">Nintendo 64</string>
    <string name="_3ds">3DS</string>
    <string name="wii_u">Wii U</string>
    <string name="start">Start</string>
    <string name="save_stats">Save Stats</string>
    <string name="most_played_game_version">"Most Played Game Version: "</string>
    <string name="zero_percent">0.00%</string>
    <string name="most_played_game_version_no_games">Most Played Game Version: No Games</string>
    <string name="total_wins_0">Total Wins: 0</string>
    <string name="total_losses_0">Total Losses: 0</string>
    <string name="game_version_none">Game Version: None</string>
    <string name="textview">TextView</string>
    <string name="super_smash_stat_tracker">Super Smash Stat Tracker</string>
</resources>
