<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.bsu.billsgreenwaymalchow.supersmashstattracker.MainActivity">

    <TextView
        android:text="@string/winTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="41dp"
        android:id="@+id/winTotalTextView" />

    <TextView
        android:text="@string/lossTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/winTotalTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="67dp"
        android:id="@+id/lossTotalTextView" />

    <Button
        android:text="@string/add_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/winTotalTextView"
        android:layout_alignStart="@+id/winTotalTextView"
        android:layout_marginTop="42dp"
        android:id="@+id/addWinButton" />

    <Button
        android:text="@string/add_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/addWinButton"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="47dp"
        android:id="@+id/addLossButton" />

    <TextView
        android:text="@string/winPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/winTotalTextView"
        android:layout_toEndOf="@+id/addWinButton"
        android:id="@+id/percentageTextView" />
</RelativeLayout>
