<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_win_loss"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/backgroundColor"
    tools:context="edu.bsu.billsgreenwaymalchow.supersmashstattracker.MainActivity">


    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_wins_text_view"
        android:layout_marginBottom="27dp"
        android:layout_above="@+id/addLossButton"
        android:layout_alignStart="@+id/add_win_button"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/win_percentage_text_view"
        android:layout_above="@+id/total_wins_text_view"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <TextView
        android:text="TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/total_losses_text_view"
        android:layout_below="@+id/win_percentage_text_view"
        android:layout_alignEnd="@+id/addLossButton"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <Button
        android:text="@string/add_win"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_win_button"
        android:layout_marginBottom="47dp"
        android:layout_above="@+id/saveStatsButton"
        android:layout_toStartOf="@+id/saveStatsButton"
        android:background="@color/win"
        android:textColor="@color/whiteText"/>

    <Button
        android:text="@string/add_loss"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addLossButton"
        android:layout_alignBaseline="@+id/add_win_button"
        android:layout_alignBottom="@+id/add_win_button"
        android:layout_toEndOf="@+id/saveStatsButton"
        android:background="@color/loss"
        android:textColor="@color/whiteText"/>

    <Button
        android:text="@string/save_stats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/saveStatsButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:background="@color/submit"
        android:textColor="@color/whiteText"/>

    <TextView
        android:text="Game Version: None"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/win_percentage_text_view"
        android:layout_marginTop="12dp"
        android:id="@+id/current_game_version" />

</RelativeLayout>